Updated KiwiPreconditions and tests (#21)
* Updated KiwiPreconditions and tests

Fixes #5